kaggle/titanic: Added an SVC model

--- a/machine-learning/kaggle/titanic/Titanic.ipynb
+++ b/machine-learning/kaggle/titanic/Titanic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 89,
    "metadata": {
     "autoscroll": false,
     "collapsed": false,
@@ -31,14 +31,16 @@
     "from sklearn.metrics import mean_squared_error\n",
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "from scipy.stats import randint, uniform\n",
+    "from scipy.stats import randint, uniform\n",
+    "from sklearn.svm import SVC\n",
     "\n",
     "random_seed = 42\n",
-    "g_verbose = 0"
+    "g_verbose = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 85,
    "metadata": {
     "autoscroll": false,
     "collapsed": false,
@@ -278,13 +280,13 @@
     "    print(col.value_counts() / len(col))\n",
     "\n",
     "\n",
-    "def printSortedSearchCVResults(g):\n",
+    "def printSortedSearchCVResults(g, ite_max=10):\n",
     "    cvres = g.cv_results_\n",
     "    i = 0\n",
     "    for mean, stdev, params in sorted(zip(cvres[\"mean_test_score\"], cvres[\"std_test_score\"], cvres[\"params\"]), key=lambda x: x[0], reverse=True):\n",
     "        print(\"%.4f %.4f\" % (mean, stdev), params)\n",
     "        i = i + 1\n",
-    "        if i >= 10:\n",
+    "        if i >= ite_max:\n",
     "            return\n",
     "\n",
     "\n",
@@ -875,6 +877,123 @@
     "print()\n",
     "printClassifierCrossValueAccuracy(rs_sgd_clf, train_data_prepared, train_data.Survived, 'rs sgd')\n",
     "printClassifierAccuracy(rs_sgd_clf, test_data_prepared, test_data.Survived, 'rs sgd / test')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {
+    "autoscroll": false,
+    "collapsed": false,
+    "ein.tags": "worksheet-0",
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(def svc / train data) X-value mean=0.8256, stdev=0.0369\n",
+      "(def svc / test) accuracy = 0.8298\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4. SVC Classifier\n",
+    "svc_clf = SVC(random_state=random_seed)\n",
+    "svc_clf.fit(train_data_prepared, train_data.Survived)\n",
+    "printClassifierCrossValueAccuracy(svc_clf, train_data_prepared, train_data.Survived,'def svc / train data')\n",
+    "printClassifierAccuracy(svc_clf, train_data_prepared, train_data.Survived, 'def svc / test')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {
+    "autoscroll": false,
+    "collapsed": false,
+    "ein.tags": "worksheet-0",
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 112 candidates, totalling 560 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=6)]: Done 168 tasks      | elapsed:    1.4s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=6)]: Done 560 out of 560 | elapsed:    6.7s finished\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Grid search hyperparameters\n",
+    "params = {\n",
+    "    'C': [1e-4, 1e-3, .01, .1, 1, 10, 100],\n",
+    "    'kernel': ['linear', 'poly', 'rbf', 'sigmoid'],\n",
+    "    'degree': [1,2,3,4]\n",
+    "    }\n",
+    "grid_search = GridSearchCV(\n",
+    "    svc_clf,\n",
+    "    params,\n",
+    "    cv=5,\n",
+    "    scoring=\"accuracy\",\n",
+    "    verbose=1,\n",
+    "    n_jobs=6)\n",
+    "grid_search.fit(train_data_prepared, train_data.Survived)\n",
+    "grid_search_svc_clf = grid_search.best_estimator_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {
+    "autoscroll": false,
+    "collapsed": false,
+    "ein.tags": "worksheet-0",
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8509 0.0248 {'C': 10, 'degree': 1, 'kernel': 'rbf'}\n",
+      "0.8509 0.0248 {'C': 10, 'degree': 2, 'kernel': 'rbf'}\n",
+      "0.8509 0.0248 {'C': 10, 'degree': 3, 'kernel': 'rbf'}\n",
+      "(grid svc / train data) X-value mean=0.8511, stdev=0.0407\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(grid svc / test) accuracy = 0.8790\n"
+     ]
+    }
+   ],
+   "source": [
+    "printSortedSearchCVResults(grid_search,3)\n",
+    "printClassifierCrossValueAccuracy(grid_search_svc_clf, train_data_prepared, train_data.Survived,'grid svc / train data')\n",
+    "printClassifierAccuracy(grid_search_svc_clf, train_data_prepared, train_data.Survived, 'grid svc / test')"
    ]
   },
   {
